Closes #1 Tried to add Jacoco reports failed to add it